@@ -7,6 +7,8 @@ NEW
     - Added option to show a separate energy bar for some bosses like Anduin at the objectives boss frames
     - Added Details skin (by SHOODOX)
     - Added GW2 style worldmap and minimap player pin
+    - Added option to set a timer to auto scroll down the chat
+    - Added option to set the number of chat messages which are scrolled with one scroll
 ]=])
 
 v("5.27.1", [=[
