@@ -163,6 +163,9 @@ GW_DEFAULT["FADE_MICROMENU"] = false
 GW_DEFAULT["AFK_MODE"] = true
 GW_DEFAULT["CHAT_MAX_COPY_CHAT_LINES"] = 100
 GW_DEFAULT["CHAT_USE_GW2_STYLE"] = true
+GW_DEFAULT["CHAT_NUM_SCROLL_MESSAGES"] = 3
+GW_DEFAULT["CHAT_SCROLL_DOWN_INTERVAL"] = 15
+
 
 GW_DEFAULT["target_TARGET_ENABLED"] = true
 GW_DEFAULT["target_TARGET_SHOW_CASTBAR"] = true
